# vertex-ai-gemini-starter

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: adc-guide-with-diagrams.md  quickstart.md
docs/diagrams/: adc-auth-flow-8steps.excalidraw  adc-cafe-analogy.excalidraw  adc-common-misconceptions.exalidraw  adc-comparison.excalidraw  adc-decision-flowchart.excalidraw  adc-overview.excalidraw  adc-practical-usage.excalidraw  adc-project-switching.excalidraw  adc-search-order.excalidraw  adc-summary-best-practices.excalidraw  adc-summary.excalidraw
examples/: check_models.py  image_analysis.py  simple_chat.py  streaming_chat.py
src/: check_models.py  image_analysis.py  simple_chat.py  streaming_chat.py
tests/: context.py  test_basic.py
vertex_ai_gemini/: __init__.py  chat.py  models.py  streaming.py  vision.py
